Creating index.html

--- a/index.html
+++ b/index.html
@@ -345,7 +345,7 @@
 		</div>
 	
 		<div>
-			<form action="futar.html" method="GET">
+			<form action="index.html" method="GET">
 				<div class="label">Show data for other stop</div>
 				<input type="text" name="stop" id="tbStopId" class="textbox" value="" placeholder="Stop ID (e.g. BKK_F01013)">
 				<input type="submit" id="btnJumpToStop" class="button" value="Show data for stop"><br>
