--- a/index.html
+++ b/index.html
@@ -362,6 +362,6 @@
 	<br>
 	<br>
 
-	<img id="imgSvg" xmlns="http://www.w3.org/2000/svg" version="1.1" class="svg" src="https://dl.dropboxusercontent.com/u/687554/futar_48_192.svg"/>
+	<img id="imgSvg" xmlns="http://www.w3.org/2000/svg" version="1.1" class="svg" src="http://darvasd.github.io/futar-display/futar_48_192.svg"/>
 </body>
 </html>
